--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--    <shape android:id="@+id/circle"
             android:shape="oval">
                 <solid
@@ -8,7 +7,7 @@
         </shape> -->
         <item android:id="@+id/action_first"
             android:title="@string/pointer"
-            android:icon="@drawable/ic_brightness_1_black_24dp" />
+            android:icon="@drawable/ic_swatch_background" />
         <item android:id="@+id/action_second"
             android:title="@string/pointer"
             android:icon="@drawable/ic_brightness_1_black_24dp" />
