--- a/app/src/main/res/menu/toolbarmenu.xml
+++ b/app/src/main/res/menu/toolbarmenu.xml
@@ -3,28 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-        <item
-            android:id="@+id/action_delete"
-            android:visible="false"
-            android:icon="@drawable/ic_delete_black_24dp"
-            android:title="@string/delete"
-            app:showAsAction="always"
-            />
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="@string/delete"
+        android:visible="false"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_transfer"
-        android:visible="false"
         android:icon="@drawable/ic_transfer_round"
         android:title="@string/replace"
-        app:showAsAction="always"
-        />
+        android:visible="false"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_add"
-        android:visible="false"
         android:icon="@drawable/ic_add_circle_outline_black_24dp"
         android:title="@string/add_swatches"
-        app:showAsAction="always"
-        />
+        android:visible="false"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_connect"
         android:icon="@drawable/ic_cast_black_24dp"
@@ -35,15 +32,15 @@
     <item
         android:id="@+id/action_info"
         android:title="@string/information"
-        app:showAsAction="never"
-/>
+        android:icon="@drawable/ic_info_outline_black_24dp"
+        app:showAsAction="never" />
 
-    <item
+    <!-- <item
         android:id= "@+id/action_open"
         android:title="Stay open"
         android:checkable="true"
         app:showAsAction="never"
         />
-
+ -->
 
 </menu>
